fixed api key button overlapping with logout, still trying to fix mobile zoom issue when changing pages

--- a/src/app/organisms/TopBar/TopBar.css
+++ b/src/app/organisms/TopBar/TopBar.css
@@ -40,11 +40,8 @@
 .apiKeyButton {
   position: absolute;
   border: none;
-  color: #D9D9D9;
+  color: #d9d9d9;
   background-color: transparent;
   cursor: pointer;
-  /* right: 10px; */
-  left: 60px;
-  font-family: 'Kumbh Sans';
-  width: 60px;
+  left: 80px;
 }
